--- a/optical-store-new/package.json
+++ b/optical-store-new/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-desktop-app",
+  "name": "optical-store-app",
   "version": "1.0.0",
-  "description": "Electron Desktop Application",
-  "main": "dist/main/main.js",
+  "description": "Optical Store Management System",
+  "main": "src/main/main.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,13 +12,17 @@
   "dependencies": {
     "electron": "^28.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.0.0",
+    "postcss": "^8.0.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0"
   }
